fix wrong width value

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -14,7 +14,7 @@ a:hover, a:focus {
 }
 
 section {
-	width: 800;
+	width: 800px;
 	float: right;
 	padding-bottom: 50px;
 }
